<resources>
    <string name="app_name">petia</string>
    <string name="input_name">Full Name</string>
    <string name="input_password">Password</string>
    <string name="input_confpass">Confirm Password</string>
    <string name="input_email">Email</string>
    <string name="input_username">Username</string>
    <string name="input_phone">Phone</string>
    <string name="input_role">Role</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_footer">Don\'t have an account?</string>
    <string name="forget_title">We’ll send your password reset info to your email address</string>
    <string name="regis_footer">Already have account?</string>
    <string name="home_faq_header">Pet Adoption FAQs</string>
    <string name="home_faq_desc">Get all the informations that you need for your adoption.</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="go_back">Go Back?</string>
    <string name="recover_btn">Recover Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_name">Pet Name - Shelter Name</string>
    <string name="pet_breed">Breed: Breed Name</string>
    <string name="pet_color">Color: Pet Color</string>
    <string name="age_label">Age</string>
    <string name="pet_age">Pet Age</string>
    <string name="gender_label">Gender</string>
    <string name="pet_gender">Pet Gender</string>
    <string name="size_label">Size</string>
    <string name="pet_size">Pet Size</string>
    <string name="animal">Animal</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="user_name">UserName</string>
    <string name="profile_header">Personal Data</string>
    <string name="language_label">Language: </string>
    <string name="email_label">Email: </string>
    <string name="name_label">Name: </string>
    <string name="phone_label">Phone: </string>
    <string name="password_label">Password: </string>
    <string name="adoptionHistory_btn">View Adoption History</string>
    <string name="changePassword_btn">Change Password</string>
    <string name="logout_btn">Sign Out</string>
    <string name="create_adoption">Create Adoption</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="comment_header">Comments</string>
    <string name="commenter_name">Name</string>
    <string name="comment">Comment</string>
    <string name="comment_input">Write a comment...</string>
    <string name="approve_shelter">Approve Shelter</string>
    <string name="shelter_1_has_applied_for_shelter_role">Shelter 1 has applied for Shelter role</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="about_pet_name">About Pet Name</string>
    <string name="adopt_now">Adopt Now</string>
    <string name="approve_adoption">Approve Adoption</string>
    <string name="change_password_modal">Change Password Modal</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confim_password_label">Confirm New Password</string>
    <string name="change_username_modal">Change Username Modal</string>
    <string name="new_username_label">New Username</string>
    <string name="change_username_btn">Change Username</string>
    <string name="choose_image_btn">Choose Image</string>
    <string name="change_image_btn">Save Changes</string>
    <string name="_1_oct_2023">1 Oct 2023</string>
    <string name="pending">Pending</string>
    <string name="history">Adoption History</string>
    <string name="from_shelter">From: Shelter</string>
    <string name="adoption_date_date">Adoption Date: Date</string>
    <string name="animal_animal">Animal: animal</string>
    <string name="breed_breed">Breed: Breed</string>
    <string name="age_age">Age: age</string>
    <string name="color_color">Color: color</string>
    <string name="size_size">Size: size</string>
    <string name="notifications">Notifications</string>
    <string name="create_conversation">Create Conversation</string>
    <string name="choose_shelter">Shelter</string>
</resources>