<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDD1E4">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editUsernameBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:background="#CDD1E4"
            android:contentDescription="editBtn"
            app:srcCompat="@drawable/edit_icon" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="92dp"
        android:background="#CDD1E4"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:contentPadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profileHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_header"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/languageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/language_label"
                android:visibility="gone"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/email_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/name_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/phone_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:text="@string/password_label"
                android:textSize="15sp" />

            <Button
                android:id="@+id/adoptionHistoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:visibility="gone"
                android:text="@string/adoptionHistory_btn" />

            <Button
                android:id="@+id/changePassBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:backgroundTint="#DC3545"
                android:text="@string/changePassword_btn" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/commentCardView"
            android:layout_width="356dp"
            android:layout_height="210dp"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:contentPadding="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/logoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/commentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_header"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/divider" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>
            </ScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:hint="@string/comment_input"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/postCommentBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="260dp"
                android:layout_marginTop="130dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="postCommentBtn"
                app:srcCompat="@drawable/edit_icon" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DC3545"
            android:text="@string/logout_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>