<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightpurple">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/topAppBarCon">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            android:layout_marginHorizontal="10dp"
            app:theme="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:titleTextColor="@color/white"
            >

            <TextView
                android:id="@+id/petTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topAppBarCon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/petDetailImage"
                android:layout_width="411dp"
                android:layout_height="217dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petDetailImage">

                <LinearLayout
                    android:id="@+id/detailCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/petName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="22.5dp"
                        android:background="@color/grey"
                        />

                    <TextView
                        android:id="@+id/shelter"
                        android:text="@string/from_shelter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:id="@+id/adoptDate"
                        android:text="@string/adoption_date_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:id="@+id/animal"
                        android:text="@string/animal_animal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:id="@+id/breed"
                        android:text="@string/breed_breed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:id="@+id/age"
                        android:text="@string/age_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:id="@+id/color"
                        android:text="@string/color_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>
                    <TextView
                        android:id="@+id/size"
                        android:text="@string/size_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"/>



                </LinearLayout>

                <ImageButton
                    android:id="@+id/shelterBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="85dp"
                    android:background="@drawable/circle_background"
                    android:src="@drawable/ic_person_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

                <TextView
                    android:id="@+id/adoptStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/pending"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>