<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/logo"/>
        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/shelter_1_has_applied_for_shelter_role"/>
            <TextView
                android:id="@+id/requestDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/_1_hour_ago"/>

            <LinearLayout
                android:layout_marginTop="2.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/approveBtn"
                    android:text="@string/approve"
                    android:background="@drawable/rounded_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:textAllCaps="false"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:textAllCaps="false"
                    android:text="@string/reject"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:background="@drawable/rounded_input"
                    app:backgroundTint="@color/red"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>