<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgetPasswordActivity">

    <LinearLayout
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="125dp"
        android:gravity="center"
        android:background="@color/bluedark">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/forgetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailTF"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="7.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgetTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        android:hint="@string/input_email"
        android:layout_marginLeft="7.5dp"
        android:layout_marginRight="7.5dp"
        android:layout_marginTop="30dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_mail"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7.5dp"
        android:gravity="right"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTF"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7.5dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:text="@string/recover_btn"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/backBtn"
        tools:layout_editor_absoluteX="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/footerLogin"
        android:background="@color/grey"
        />

    <LinearLayout
        android:id="@+id/footerLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/footerLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/regis_footer"
            />

        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:padding="0dp"
            android:textColor="@color/bluelight"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="3dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>