<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="7.5dp"
    android:orientation="vertical"
    android:id="@+id/historyCard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_input"
    android:backgroundTint="@color/white"
    android:padding="10dp"
    android:layout_marginHorizontal="7.5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:layout_marginRight="1dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/pet_name"/>
            <TextView
                android:id="@+id/breed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/breed"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/adoptDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/_1_oct_2023"/>
            <TextView
                android:id="@+id/adoptStatus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adoptDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/pending" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>